<?xml version="1.0" encoding="UTF-8"?>
<project xmlns="http://maven.apache.org/POM/4.0.0"
         xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
         xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
    <parent>
        <groupId>org.apache.phoenix</groupId>
        <artifactId>phoenix-hive-base</artifactId>
        <version>6.0.0-SNAPSHOT</version>
    </parent>
    <modelVersion>4.0.0</modelVersion>

    <artifactId>phoenix5-hive</artifactId>
    <name>Phoenix Hive Connector for Phoenix 5</name>

    <properties>
        <test.tmp.dir>${project.build.directory}/tmp</test.tmp.dir>
        <phoenix.version>${phoenix-five.version}</phoenix.version>
        <hbase.version>${hbase-two.version}</hbase.version>
        <hadoop.version>${hadoop-three.version}</hadoop.version>
        <avatica.version>1.12.0</avatica.version>
        <hive.version>${hive3.version}</hive.version>
        <curator.version>4.0.0</curator.version>
        <jetty.version>9.3.8.v20160314</jetty.version>
        <jdk.version>1.8</jdk.version>
        <phoenix.compat.version>5</phoenix.compat.version>
    </properties>

    <dependencies>
        <dependency>
            <groupId>org.apache.phoenix</groupId>
            <artifactId>phoenix5-compat</artifactId>
        </dependency>
        <dependency>
            <groupId>org.apache.phoenix</groupId>
            <artifactId>phoenix-core</artifactId>
            <exclusions>
                <exclusion>
                    <groupId>com.google.guava</groupId>
                    <artifactId>guava</artifactId>
                </exclusion>
            </exclusions>
        </dependency>
        <dependency>
            <groupId>org.apache.hive</groupId>
            <artifactId>hive-standalone-metastore</artifactId>
            <type>test-jar</type>
            <version>${hive.version}</version>
            <scope>test</scope>
        </dependency>
        <dependency>
            <groupId>org.apache.hive</groupId>
            <artifactId>hive-metastore</artifactId>
            <version>${hive.version}</version>
            <scope>test</scope>
        </dependency>
        <dependency>
            <groupId>org.apache.hadoop</groupId>
            <artifactId>hadoop-mapreduce-client-core</artifactId>
            <exclusions>
                <exclusion>
                    <groupId>io.netty</groupId>
                    <artifactId>netty</artifactId>
                </exclusion>
            </exclusions>
        </dependency>
        <dependency>
            <groupId>io.netty</groupId>
            <artifactId>netty-all</artifactId>
            <version>${netty.version}</version>
        </dependency>
        <dependency>
            <groupId>org.eclipse.jetty</groupId>
            <artifactId>jetty-util</artifactId>
            <scope>test</scope>
            <version>${jetty.version}</version>
        </dependency>
        <dependency>
            <groupId>org.eclipse.jetty</groupId>
            <artifactId>jetty-http</artifactId>
            <scope>test</scope>
            <version>${jetty.version}</version>
        </dependency>
        <dependency>
            <groupId>org.eclipse.jetty</groupId>
            <artifactId>jetty-server</artifactId>
            <scope>test</scope>
            <version>${jetty.version}</version>
        </dependency>
        <dependency>
            <groupId>com.google.guava</groupId>
            <artifactId>guava</artifactId>
            <version>19.0</version>
        </dependency>
        <dependency>
            <groupId>org.apache.calcite.avatica</groupId>
            <artifactId>avatica</artifactId>
            <!-- Overriding the version of Avatica that PQS uses so that Hive will work -->
            <version>${avatica.version}</version>
            <scope>test</scope>
            <!-- And removing a bunch of dependencies that haven't been shaded in this older
                 Avatica version which conflict with HDFS -->
            <exclusions>
                <exclusion>
                    <groupId>org.hsqldb</groupId>
                    <artifactId>hsqldb</artifactId>
                </exclusion>
                <exclusion>
                    <groupId>com.fasterxml.jackson.core</groupId>
                    <artifactId>jackson-databind</artifactId>
                </exclusion>
                <exclusion>
                    <groupId>com.fasterxml.jackson.core</groupId>
                    <artifactId>jackson-annotations</artifactId>
                </exclusion>
                <exclusion>
                    <groupId>com.fasterxml.jackson.core</groupId>
                    <artifactId>jackson-core</artifactId>
                </exclusion>
            </exclusions>
        </dependency>
    </dependencies>
    <build>
        <plugins>
            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-failsafe-plugin</artifactId>
                <executions>
                    <execution>
                        <id>HBaseManagedTimeTests</id>
                        <configuration>
                            <encoding>UTF-8</encoding>
                            <forkCount>1</forkCount>
                            <runOrder>alphabetical</runOrder>
                            <reuseForks>false</reuseForks>
                            <argLine>-enableassertions -Xmx2000m -XX:MaxPermSize=256m
                                -Djava.security.egd=file:/dev/./urandom
                                "-Djava.library.path=${hadoop.library.path}${path.separator}${java.library.path}"
                                -XX:+HeapDumpOnOutOfMemoryError -XX:HeapDumpPath=./target/
                                -Dorg.apache.hadoop.hbase.shaded.io.netty.packagePrefix=org.apache.hadoop.hbase.shaded.
                            </argLine>
                            <redirectTestOutputToFile>${test.output.tofile}
                            </redirectTestOutputToFile>
                            <testSourceDirectory>${basedir}/src/it/java</testSourceDirectory>
                            <groups>org.apache.phoenix.end2end.HBaseManagedTimeTest</groups>
                            <shutdown>kill</shutdown>
                            <useSystemClassLoader>false</useSystemClassLoader>
                        </configuration>
                        <goals>
                            <goal>integration-test</goal>
                            <goal>verify</goal>
                        </goals>
                    </execution>
                </executions>
            </plugin>
        </plugins>
    </build>
</project>